<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_map"
        android:icon="@drawable/ic_map_location"
        android:title=""
        app:showAsAction="always"/>

    <item android:id="@+id/menu_item_chat"
        android:icon="@drawable/ic_chat"
        android:title=""
        app:showAsAction="always"/>

    <item android:id="@+id/menu_item_profile"
        android:title="@string/profile"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_item_users"
        android:icon="@drawable/icon_users"
        android:title=""
        app:showAsAction="always"/>

    <item android:id="@+id/menu_item_terms"
        android:title="@string/terms"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_item_policy"
        android:title="@string/policy"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_item_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>