<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liyongzhen.teamup.activities.LoginActivity"
    android:background="@drawable/background_logo"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingTop="40dp"
        >


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/myblack"
            android:text=""
            android:layout_marginBottom="40dp"
            />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#777"
            android:textColor="#000"
            android:backgroundTint="@color/myorrange"
            android:layout_marginBottom="10dp"

            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/myorrange"
            android:textColorHint="#777"
            android:textColor="#000"

            android:inputType="textPassword"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_button_login"
            android:id="@+id/appCompatButtonLogin"
            android:textColor="#000"
            android:backgroundTint="@color/myorrange"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_or"
            />
        <!--<Button-->
            <!--android:id="@+id/button_facebook"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginEnd="20dp"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:background="@drawable/button_facebook"-->
            <!--android:text="@string/login_button_facebook"-->
            <!--android:onClick="fbLogin"-->
            <!--android:textColor="#fff" />-->

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/btn_google"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_google"
            android:text="@string/login_button_google"
            android:textColor="#fff"
            android:onClick="onClickGooglSignIn"
            />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_register"
            android:textSize="15sp"
            />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login_button_register"
            android:textColor="#000"
            android:id="@+id/appCompatButtonRegister"
            android:backgroundTint="@color/myorrange"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
